@@ -23,4 +23,7 @@ cmd_find(int argc, char **argv, struct mpd_connection *conn);
 int
 cmd_findadd(int argc, char **argv, struct mpd_connection *conn);
 
+int
+cmd_searchplaylist(int argc, char **argv, struct mpd_connection *conn);
+
 #endif
