@@ -1,6 +1,6 @@
 [wrap-git]
 url = https://github.com/MusicPlayerDaemon/libmpdclient
-revision = v2.21
+revision = v2.23
 
 [provide]
 libmpdclient = libmpdclient_dep
